--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@ body {
 }
 
 .weatherContainer {
-	background-color: #f5f5f5;
+	background-color: rgba(245, 245, 245, 0.8);
 	border: 1px solid #e3e3e3;
 	border-radius: 4px;
 	width: auto;
